[gd_scene load_steps=9 format=3 uid="uid://doli71bfmeej7"]

[ext_resource type="Theme" uid="uid://dncqvenqwlml1" path="res://values/menu_theme.tres" id="1_2j0hn"]
[ext_resource type="Script" path="res://entites/global/settings_panel/settings_panel.gd" id="1_d3qaa"]
[ext_resource type="Script" path="res://entites/global/settings_panel/inputs/chart_path_changer.gd" id="2_xltdr"]
[ext_resource type="Script" path="res://entites/global/settings_panel/inputs/offset_changer.gd" id="5_kfb0v"]

[sub_resource type="LabelSettings" id="LabelSettings_qm3nu"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_xg8nn"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_pk7v3"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_q3ioc"]

[node name="SettingsPanel" type="Panel" groups=["SettingsPanel"]]
custom_minimum_size = Vector2(450, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_2j0hn")
script = ExtResource("1_d3qaa")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_qm3nu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 1

[node name="Login" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_2j0hn")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Login"]
layout_mode = 2
text = "Player Name"
label_settings = SubResource("LabelSettings_xg8nn")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/Login"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Player"
alignment = 1

[node name="KeybindList" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/KeybindList"]
layout_mode = 2
text = "Keybinds"
label_settings = SubResource("LabelSettings_pk7v3")
horizontal_alignment = 1

[node name="LeftKat" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/KeybindList"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/KeybindList/LeftKat"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Kat"
horizontal_alignment = 2

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/KeybindList/LeftKat"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Input"
text_overrun_behavior = 3

[node name="Control" type="Control" parent="ScrollContainer/VBoxContainer/KeybindList/LeftKat"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="LeftDon" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/KeybindList"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/KeybindList/LeftDon"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left Don"
horizontal_alignment = 2

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/KeybindList/LeftDon"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Input"
text_overrun_behavior = 3

[node name="Control" type="Control" parent="ScrollContainer/VBoxContainer/KeybindList/LeftDon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="RightDon" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/KeybindList"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/KeybindList/RightDon"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Don"
horizontal_alignment = 2

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/KeybindList/RightDon"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Input"
text_overrun_behavior = 3

[node name="Control" type="Control" parent="ScrollContainer/VBoxContainer/KeybindList/RightDon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="RightKat" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/KeybindList"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/KeybindList/RightKat"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right Kat"
horizontal_alignment = 2

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/KeybindList/RightKat"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Input"
text_overrun_behavior = 3

[node name="Control" type="Control" parent="ScrollContainer/VBoxContainer/KeybindList/RightKat"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="ChartPathChanger" type="VBoxContainer" parent="ScrollContainer/VBoxContainer" groups=["ChartPathChanger"]]
layout_mode = 2
script = ExtResource("2_xltdr")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/ChartPathChanger"]
layout_mode = 2
text = "Chart Paths"
label_settings = SubResource("LabelSettings_pk7v3")
horizontal_alignment = 1

[node name="Description" type="Label" parent="ScrollContainer/VBoxContainer/ChartPathChanger"]
layout_mode = 2
text = "Press F5 in Song Select to refresh charts."
label_settings = SubResource("LabelSettings_q3ioc")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="ScrollContainer/VBoxContainer/ChartPathChanger"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/ChartPathChanger/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ChartPathChanger/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/ChartPathChanger"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="AddButton" type="Button" parent="ScrollContainer/VBoxContainer/ChartPathChanger/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add"

[node name="FileDialog" type="FileDialog" parent="ScrollContainer/VBoxContainer/ChartPathChanger/HBoxContainer/AddButton"]
title = "Open a Directory"
initial_position = 2
size = Vector2i(705, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="RemoveButton" type="Button" parent="ScrollContainer/VBoxContainer/ChartPathChanger/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/ChartPathChanger"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Open ConvertedCharts Directory"

[node name="Offset" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_2j0hn")
script = ExtResource("5_kfb0v")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Offset"]
layout_mode = 2
text = "Offset"
label_settings = SubResource("LabelSettings_xg8nn")
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/Offset"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = -500.0
max_value = 500.0
step = 5.0
allow_greater = true
allow_lesser = true

[node name="SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/Offset"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = -500.0
max_value = 500.0
step = 5.0
allow_greater = true
allow_lesser = true
alignment = 1

[connection signal="text_submitted" from="ScrollContainer/VBoxContainer/Login/LineEdit" to="." method="change_player_name"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/KeybindList/LeftKat/Button" to="." method="change_key" binds= ["LeftKat"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/KeybindList/LeftDon/Button" to="." method="change_key" binds= ["LeftDon"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/KeybindList/RightDon/Button" to="." method="change_key" binds= ["RightDon"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/KeybindList/RightKat/Button" to="." method="change_key" binds= ["RightKat"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/ChartPathChanger/HBoxContainer/AddButton" to="ScrollContainer/VBoxContainer/ChartPathChanger/HBoxContainer/AddButton/FileDialog" method="show"]
[connection signal="dir_selected" from="ScrollContainer/VBoxContainer/ChartPathChanger/HBoxContainer/AddButton/FileDialog" to="ScrollContainer/VBoxContainer/ChartPathChanger" method="add_path" binds= [true]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/ChartPathChanger/HBoxContainer/RemoveButton" to="ScrollContainer/VBoxContainer/ChartPathChanger" method="delete_selected_path"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/ChartPathChanger/Button" to="." method="open_converted_charts_folder"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/Offset/HSlider" to="ScrollContainer/VBoxContainer/Offset" method="set_global_offset" binds= [false]]
[connection signal="focus_entered" from="ScrollContainer/VBoxContainer/Offset/SpinBox" to="." method="update_focus" binds= [NodePath(".")]]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/Offset/SpinBox" to="ScrollContainer/VBoxContainer/Offset" method="set_global_offset" binds= [true]]
